// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse a simple HTML file into nodes 1`] = `
<html
  lang="en"
>
  <head>
    
		
    <meta
      charset="utf-8"
    />
    

		
    <title>
      Simple HTML 5 Template
    </title>
    
		
    <meta
      content="Simple HTML 5 Template"
      name="description"
    />
    
		
    <meta
      content="jmq"
      name="author"
    />
    
	
  </head>
  

	
  <body>
    
		
    <h1>
      Test
    </h1>
    
	


  </body>
</html>
`;

exports[`Parse a simple HTML file into nodes 2`] = `
<head>
  
		
  <meta
    charset="utf-8"
  />
  

		
  <title>
    Simple HTML 5 Template
  </title>
  
		
  <meta
    content="Simple HTML 5 Template"
    name="description"
  />
  
		
  <meta
    content="jmq"
    name="author"
  />
  
	
</head>
`;

exports[`Parse a simple HTML file into nodes 3`] = `
<meta
  charset="utf-8"
/>
`;

exports[`Parse a simple HTML file into nodes 4`] = `
<title>
  Simple HTML 5 Template
</title>
`;

exports[`Parse a simple HTML file into nodes 5`] = `
<meta
  content="Simple HTML 5 Template"
  name="description"
/>
`;

exports[`Parse a simple HTML file into nodes 6`] = `
<meta
  content="jmq"
  name="author"
/>
`;

exports[`Parse a simple HTML file into nodes 7`] = `
<body>
  
		
  <h1>
    Test
  </h1>
  
	


</body>
`;

exports[`Parse a simple HTML file into nodes 8`] = `
<h1>
  Test
</h1>
`;
